Dockerized Spring Boot backend