@@ -1,32 +1,79 @@
+//package com.example.policyenginebackend.config;
+//
+//import org.springframework.beans.factory.annotation.Value;
+//import org.springframework.context.annotation.Bean;
+//import org.springframework.context.annotation.Configuration;
+//import org.springframework.web.cors.CorsConfiguration;
+//import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+//import org.springframework.web.filter.CorsFilter;
+//
+//import java.util.Arrays;
+//import java.util.List;
+//
+//@Configuration
+//public class CorsConfig {
+//
+//    @Bean
+//    public CorsFilter corsFilter() {
+//        CorsConfiguration config = new CorsConfiguration();
+//
+//        // Frontend URL
+//        config.setAllowedOriginPatterns(
+//                Arrays.asList(allowedOrigins.split(","))
+//        );
+//
+//        // Allow all REST methods
+//        config.setAllowedMethods(List.of(
+//                "GET", "POST", "PUT", "DELETE", "OPTIONS"
+//        ));
+//
+//        // Allow all headers
+//        config.setAllowedHeaders(List.of("*"));
+//
+//        // Allow cookies / auth headers
+//        config.setAllowCredentials(true);
+//
+//        UrlBasedCorsConfigurationSource source =
+//                new UrlBasedCorsConfigurationSource();
+//        source.registerCorsConfiguration("/**", config);
+//
+//        return new CorsFilter(source);
+//    }
+//}
+
+
 package com.example.policyenginebackend.config;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 public class CorsConfig {
 
+    @Value("${app.cors.allowed-origins}")
+    private String allowedOrigins;
+
     @Bean
     public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
 
-        // Frontend URL
-        config.setAllowedOrigins(List.of("http://localhost:5173"));
+        // ✅ Spring Boot 3 correct way
+        config.setAllowedOriginPatterns(
+                Arrays.asList(allowedOrigins.split(","))
+        );
 
-        // Allow all REST methods
         config.setAllowedMethods(List.of(
                 "GET", "POST", "PUT", "DELETE", "OPTIONS"
         ));
 
-        // Allow all headers
         config.setAllowedHeaders(List.of("*"));
-
-        // Allow cookies / auth headers
         config.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source =
